tests/NormalTests/paczka1/fuzzy1/11182386.err
Error in line 3: kqS16LaOn S595 38,2
Error in line 2: UzeDxmLr S595 65,8
Error in line 20: kqS16LaOn S808 262,4
Error in line 38: UzeDxmLr A388 85,0
